# agentic-engineer

./: .gitignore  .mcp.json.firecrawl_4k  CLAUDE.md  README.md
.claude/agents/: docs-scraper.md  research-docs-fetcher.md
.claude/commands/: background.md  commit.md  load_ai_docs.md  prime-cc.md  prime.md  prime_cc.md  settings.local.json
.claude/commands/general/: background-agent.md  build.md  load-ai-docs.md  parallel-subagents.md  prime-BMAD.md  prime-cc.md  prime-full.md  quick-plan.md
.claude/commands/multimedia/: create-image.md  edit-image.md
.claude/context/bmad-core/: install-manifest.yaml  user-guide.md
.claude/context/content-creation/: README.md  (+2 more)
.claude/prompts/: PROMPT-TEMPLATE.md  airtable-analyzer.md  background-agent-backup.md  research-docs-fetcher.md
agents/background/: background-report-Wed_21_45_59.complete.md
apps/cc_py_wrapper/: README.md  __init__.py  cli.py  pyproject.toml  test_wrapper.py  types.py  wrapper.py
apps/cc_py_wrapper/examples/: basic_usage.py  slash_commands.json
docs/: README.md
docs/ai-docs/: README.md  claude-code-hooks-reference.md  claude-code-mcp.md  claude-code-sdk-headless.md  claude-code-sdk-python-reference.md  claude-code-slash-commands.md  claude-code-subagents.md  claude-code-typescript-sdk-reference.md  claude-models-overview.md  uv-projects-managing-dependencies.md  uv-scripts-guide.md
docs/storyminers/: all-details.md
reports/background-agent/: background-report-16-Sep-2025_23-24-50-complete.md  background-report-Thu_21_25_10.md.complete.md  background-report-Thu_21_32_47.md.complete.md
(+253 files in other folders)
